2013-01-04  Holger Seelig  <holger.seelig@yahoo.de>

	* rules:
	* compat:
	* control:
	* copyright:
	* changelog:
	* Titania.userprefs:
	* format:
	* titania.debhelper.log:
	* titania.postrm.debhelper:
	* titania.postinst.debhelper: 

2013-01-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.sln:
	* Titania.usertasks:
	* Titania.userprefs:
	* ChangeLog:
	* Packages.mdproj: 

2012-12-31  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2012-12-27  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2012-12-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.usertasks: 

2012-12-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2012-12-19  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2012-12-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2012-12-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2012-12-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2012-12-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2012-12-13  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2012-12-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2012-12-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.sln:
	* NEWS:
	* TODO:
	* README:
	* missing:
	* INSTALL:
	* AUTHORS:
	* depcomp:
	* compile:
	* COPYING:
	* libtool:
	* config.h:
	* stamp-h1:
	* Makefile:
	* Titania.userprefs:
	* bootstrap:
	* ltmain.sh:
	* configure:
	* ChangeLog:
	* config.log:
	* install-sh:
	* aclocal.m4:
	* config.sub:
	* gtkgl.h:
	* gdkglext.pc:
	* config.h.in:
	* gtkglext.pc:
	* gdkgl.h:
	* Makefile.am:
	* Makefile.in:
	* COPYING.LIB:
	* MAINTAINERS:
	* gtk-doc.make:
	* Makefile:
	* gtkglext.nsi:
	* Makefile:
	* config.guess:
	* configure.ac:
	* README.win32:
	* lw.c:
	* gtkglext.doap:
	* Makefile:
	* lw.h:
	* config.status:
	* .gitignore:
	* .gitignore:
	* gdkglext.pc.in:
	* gtkglext.pc.in:
	* gtkglext.cproj: