@@ -1,5 +1,10 @@
 2013-01-04  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* main.cpp:
+	* x3dtidy.cproj: 
+
+2013-01-04  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* x3dtidy.cproj: 
 
 2012-11-24  Holger Seelig  <holger.seelig@yahoo.de>
